--- a/css/sobre.css
+++ b/css/sobre.css
@@ -77,6 +77,11 @@ body{
     margin: 10px 0px;
 }
 
+.cards > div > p{
+    line-height: 1.5;
+    font-size: 1.2em;
+}
+
 .logo-rei{
     margin-top: 7px;
 }
@@ -176,7 +181,7 @@ body{
 .title-lojas{
     text-align: center;
     margin: 50px 0px;
-    font-size: 1.8em;
+    font-size: 1.2em;
 }
 
 /* Lojas */
